@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.telequebec"
        name="Télé-Québec"
-       version="3.2.1"
-       provider-name="CB"
+       version="3.2.2"
+       provider-name="dualB"
 >
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
